<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InternalActivity">

    <Button
        android:id="@+id/btnBuatFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buat_file" />

    <Button
        android:id="@+id/btnUbahFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubah_file" />

    <Button
        android:id="@+id/btnBacaFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baca_file" />

    <Button
        android:id="@+id/btnHapusFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hapus_file" />

    <TextView
        android:id="@+id/textBaca"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:hint="@string/hasil_baca_file"
        android:textColorHint="#000"
        android:padding="5dp"
        android:gravity="top|start"
        android:background="@android:color/darker_gray"


         />
</LinearLayout>